[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
futures = "0.3"
tokio = { version = "1.23.1", features = ["full"] }
async-trait = "0.1.60"
serde_json = "1.0.91"
serde = "1.0.152"
uuid = "1.3.0"
